# rtabmap_to_octomap

./: README.md  output  print_grid.py
examples/apartamento/: apartamento_rtabmap.pgm  apartamento_rtabmap.yaml  apartamento_rtabmap_ele.pgm  apartamento_rtabmap_octo.ot
rtabmap_to_octomap/: CMakeLists.txt  package.xml
rtabmap_to_octomap/include/rtabmap_to_octomap/: OctomapToGridmap.hpp
rtabmap_to_octomap/launch/: rtabmap_to_octomap.launch.py
rtabmap_to_octomap/src/: OctomapToGridmap.cpp  octomap_to_gridmap_node.cpp
